<resources>
    <string name="app_name">Choices</string>
    <string name="quitApp">Quit</string>
    <string name="choose">Choose your adventure!</string>
    <string name="Defense">Defense</string>
    <string name="Health">Health</string>
    <string name="Attack">Attack</string>
    <string name="battle">Battle!</string>
    <string name="fight">Fight!</string>
    <string name="ChooseYourCharacter">Choose Your Character</string>
    <string name="goBack">Go Back</string>
    <string name="back">Back</string>
</resources>