<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/lwood3"
    android:textColor="#000000">

    <Button
        android:id="@+id/button4"
        android:layout_width="329dp"
        android:layout_height="57dp"
        android:layout_marginStart="41dp"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="29dp"
        android:background="@drawable/box"
        android:onClick="commenceAttack"
        android:text="@string/fight"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="110dp"
        android:layout_height="122dp"
        android:layout_marginStart="48dp"
        android:layout_marginBottom="124dp"
        android:src="@drawable/dwarf"
        app:layout_constraintBottom_toTopOf="@+id/eHealthView"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="72dp"
        android:layout_height="19dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="116dp"
        android:text="@string/Attack"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/pAttack" />

    <TextView
        android:id="@+id/pAttack"
        android:layout_width="79dp"
        android:layout_height="19dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="91dp"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/pHealthView" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="72dp"
        android:layout_height="20dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="89dp"
        android:text="@string/Health"
        android:textColor="#000000"
        app:layout_constraintEnd_toStartOf="@+id/pHealthView"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/battleTitle" />

    <TextView
        android:id="@+id/playerNameView"
        android:layout_width="102dp"
        android:layout_height="46dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="253dp"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/battleTitle" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="72dp"
        android:layout_height="20dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="39dp"
        android:text="@string/Attack"
        android:textColor="#000000"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/pDefense"
        android:layout_width="79dp"
        android:layout_height="19dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="88dp"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/pAttack" />

    <TextView
        android:id="@+id/pHealthView"
        android:layout_width="79dp"
        android:layout_height="19dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="91dp"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/battleTitle" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="110dp"
        android:layout_height="135dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="44dp"
        android:src="@drawable/dwarf"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/eNameView"
        android:layout_width="110dp"
        android:layout_height="28dp"
        android:layout_marginStart="245dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="20dp"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/eAttackView"
        android:layout_width="79dp"
        android:layout_height="19dp"
        android:layout_marginStart="86dp"
        android:layout_marginBottom="44dp"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="72dp"
        android:layout_height="19dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="36dp"
        android:text="@string/Attack"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/textView10"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        tools:text="@string/Attack" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="72dp"
        android:layout_height="19dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="44dp"
        android:text="@string/Defense"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toStartOf="@+id/imageView2" />

    <TextView
        android:id="@+id/eDefenseView"
        android:layout_width="79dp"
        android:layout_height="19dp"
        android:layout_marginStart="86dp"
        android:layout_marginBottom="36dp"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/eAttackView"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/eHealthView"
        android:layout_width="79dp"
        android:layout_height="19dp"
        android:layout_marginStart="86dp"
        android:layout_marginBottom="43dp"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/eDefenseView"
        app:layout_constraintEnd_toStartOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="72dp"
        android:layout_height="19dp"
        android:layout_marginTop="116dp"
        android:text="@string/Health"
        android:textColor="#000000"
        app:layout_constraintStart_toEndOf="@+id/eHealthView"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/battleTitle"
        android:layout_width="325dp"
        android:layout_height="78dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="43dp"
        android:background="@drawable/banner"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/battle" />

</androidx.constraintlayout.widget.ConstraintLayout>